--- a/src/raw/Grid Layouts/grid-areas/01 - Simple/index.css
+++ b/src/raw/Grid Layouts/grid-areas/01 - Simple/index.css
@@ -1,5 +1,19 @@
+:root {
+  /** CSS PRIMARY COLORS */ 
+  --color-primary-a0:   #ffffff;
+  --color-primary-a10:  #d3eff4;
+  --color-primary-a20:  #a4dee9;
+  --color-primary-a30:  #6ecddf; 
+  --color-primary-a50:  #00bcd4;
+  --color-primary-a60:  #1c899a;
+  --color-primary-a70:  #1e5a64;
+  --color-primary-a80:  #172e33;
+  --color-primary-a90:  #000000;  
+}
+
 .item1 {
     grid-area: myArea;
+    justify-self: stretch;
   }
   
   .grid-container {
@@ -7,14 +21,17 @@
     grid-template-areas:
       'myArea myArea . . .'
       'myArea myArea . . .';
-    grid-gap: 10px;
-    background-color: #2196F3;
+    gap: 10px;
+    background-color: var(--color-primary-a70);
     padding: 10px;
+    /* align-items: center; */
+    /* justify-items: center; */
   }
   
   .grid-container > div {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: var(--color-primary-a30);
     text-align: center;
+    /* justify-self: stretch; */
     padding: 20px 0;
     font-size: 30px;
   }
