--- a/src/raw/Grid Layouts/grid-column grid-row/01 - Simple/index.css
+++ b/src/raw/Grid Layouts/grid-column grid-row/01 - Simple/index.css
@@ -14,7 +14,9 @@
 /* Grid Layout */
 .container01 {
     display: grid;
-    gap: 8px;    
+    
+    /* gap row column */
+    gap: 5px 10px;    
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(5, 1fr);
     padding: 0.5rem;
