--- a/src/raw/Grid Layouts/Centering in Grids/index.css
+++ b/src/raw/Grid Layouts/Centering in Grids/index.css
@@ -20,7 +20,7 @@ body {
   display: inline-grid;
   grid-template-rows: repeat(3, 100px);
   grid-template-columns: repeat(3, 100px);
-  gap: 3px;
+  gap: 5px 5px;
 }
 
 .square {
